# Starcounter

./: .gitignore  .gitmodules  123.md  CHANGELOG.md  CHANGES  CMakeLists.txt  Help-Page-Template.md  Home.md  Introduction.md  LICENSE.md  README.md  ScErrUnspecified-(SCERR999).md  test.txt
StarcounterJs/StarcounterJs/: CMakeLists.txt  StarcounterJs.cpp  StarcounterJs.vcxproj  StarcounterJs.vcxproj.filters  bootstrap-V8.cc  bootstrap-starcounter.cc  bootstrap.cc  interactive-shell.cc  main.cc  main.cpp  memory.cc  starcounter-host.h  v8-host.h
src/: CMakeLists.txt  Level1.sln  Orange.sln  clean_all.bat
src/Applications/: Apps.sln
src/BuildSystem/: AutostartApps.json  Build32BitComponents.csproj  Build32bitcomponents.bat  Build32bitcomponents_rel.bat  BuildAtTheEnd.csproj  BuildBoth.bat  BuildLevel0.bat  BuildSystemCode.sln  CopyDependenciesBuildServer.csproj  CopyDependenciesLocal.csproj  CopyDependenciesRemote.csproj  GitTagging.bat  README.md  WhiteList.txt
src/Chunks/: CMakeLists.txt
src/Development/: About.txt
src/FasterThanJson/: AnyBaseBool.cs  Base16Int.cs  Base256Int.cs  Base32Int.cs  Base64Binary.cs  Base64Decimal.cs  Base64Double.cs  Base64Int.cs  FasterThanJson.csproj  HostedTuple.md  Intrinsics.cs  MemcpyUtil.cs  SafeTupleReaderBase64.cs  SafeTupleWriterBase64.cs  SchemaSchema.md  SessionBlob.cs  TupleProxy.cs  TupleReader.cs  TupleReaderBase64.cs  TupleWriter.cs  TupleWriterBase64.cs  TupleWriterDynamic.cs  TupleWriterStatic.cs
src/HTTP/: CMakeLists.txt  HttpSessions.cs  HttpStructs.cs  HttpStructs.csproj
src/Hosting/: CMakeLists.txt
src/NetworkGateway/: NetworkGateway.sln  NetworkGateway.vcxproj  NetworkGateway.vcxproj.filters  README.md
src/REST/: HttpRequestWriter.cs  Starcounter.Rest.csproj
src/Scripts/: kill_all.bat  start_db.bat
src/Starcounter.Administrator/: .gitignore  AppApp.json  AppApp.json.cs  AppsApp.json  AppsApp.json.cs  DatabaseApp.json  DatabaseApp.json.cs  DatabaseAppsApp.json.cs  DatabasesApp.json  DatabasesApp.json.cs  ExecRequest.json  ExecRequest.json.cs  HostedExecutables.cs  LogApp.json  LogApp.json.cs  LogEntryApp.json  LogEntryApp.json.cs  Master.json  Master.json.cs  Model.cs  ServerApp.json  ServerApp.json.cs  SqlApp.json  SqlApp.json.cs  Starcounter.Administrator.csproj  Starcounter.Administrator.sln  TestSqlResult.cs  apps.html  database.html  databases.html  index.html  index.html_  index2.html  log.html  server.html  sql.html  test.html
src/Starcounter.Apps/: App.Dynamic.cs  App.Entity.cs  App.GetSetValue.cs  App.Json.cs  App.QuickTuple.cs  App.cs  AppFactory.cs  AppList.cs  AppModule.cs  AppParent.cs  Arr.cs  ChangeLog.cs  Container.cs  DataBinding.cs  LongRunningTransaction.cs  ManagedTupleWriter.cs  Obj.Dynamic.cs  Obj.GetSetValue.cs  Obj.IBindable.cs  Obj.Json.cs  Obj.QuickTuple.cs  Obj.REST.cs  Obj.cs  Session.cs  Starcounter.App.targets  Starcounter.Apps.csproj  Temp.cs  TemplateAttribute.cs  tuples.html
src/Starcounter.Apps.CodeGeneration/: Starcounter.Apps.CodeGeneration.csproj
src/Starcounter.Apps.CodeGeneration.Tests/: DebugCompiler.cs  JsonSerializeTest.cs  MySampleApp.json  MySampleApp.json.cs  MySampleApp2.json  PregeneratedSerializationCode.cs  Starcounter.Apps.CodeGeneration.Tests.csproj  TestJsonOut.cs  TestMessage.g.cs  TestMessage.json  TestMessage.json.cs  TestTemplates.cs  simple.facit.cs  simple.json  supersimple.json
src/Starcounter.Apps.HtmlReader/: Starcounter.Apps.HtmlReader.csproj  TemplateFromHtml.cs
src/Starcounter.Apps.HtmlReader.Tests/: Starcounter.Apps.HtmlReader.Tests.csproj  TestHtmlReader.cs  misplaced.html  testtemplate.html
src/Starcounter.Apps.Interfaces/: IApp.cs  IAppArray.cs  IAppFactory.cs  IArray.cs  IDebugInfo.cs  IParent.cs  Starcounter.Apps.Interfaces.csproj
src/Starcounter.Apps.JsTemplateParser/: AssemblyInfo.fs  Compiler.Ast.fs  Compiler.FullParser.fs  Compiler.Lexer.fs  Compiler.Materializer.fs  Compiler.Parser.fs  Environment.fs  Error.fs  Example.concept  FSharp.fs  Starcounter.Apps.JsTemplateParser.fsproj  example.test
src/Starcounter.Apps.JsonPatch/: AppRestServer.cs  AppServer.cs  AppsBootstrapper.cs  ChangeLog.cs  DbImpl.cs  HttpPatchBuilder.cs  InternalHandlers.cs  JsonHelper.cs  JsonPatch.cs  JsonPointer.cs  NodeX.cs  PuppetToViewConverter.cs  RestServer.cs  Session.cs  SessionDictionary.cs  Starcounter.App.Server.csproj  Starcounter.Apps.JsonPatch.csproj  X.cs
src/Starcounter.Apps.JsonReader/: AppTemplateFactory.cs  Starcounter.Apps.JsonReader.csproj  TemplateFromJs.cs
src/Starcounter.Apps.JsonReader.Tests/: Starcounter.Apps.JsonReader.Tests.csproj  TestJsReader.cs
src/Starcounter.Apps.Package/: Archive.cs  InputErrorException.cs  InstallArchive.cs  Starcounter.Apps.Package.csproj  Utils.cs
src/Starcounter.Apps.Test/: AdvancedRequestResponseUsage.cs  ClangUsageTests.cs  FakeDbImpl.cs  IRequestHandler.cs  JsonPatchTest.cs  MainApp.cs  Master.cs  Master.json.g.cs  MergedResponsesTests.cs  NewRestTests.cs  NodeRelatedTests.cs  OntologyMap.Tests.cs  Polyjuice.Tests.cs  SampleApp.json  SessionUsages.cs  Starcounter.Apps.Tests.csproj  TestApp.cs  TestCallLevel.cs  TestDynamicApps.cs  TestHandlerMapping.cs  UriMatcherGenTests.cs
src/Starcounter.BitsAndBytes/: BitsAndBytes.csproj  Hash64.cs  Injector.cs  IntExtension.cs  Paths.cs  Starcounter.BitsAndBytes.csproj  StarcounterLog.cs  Utf8Helper.cs
src/Starcounter.BitsAndBytes.Native/: BitsAndBytes.Unsafe.csproj  BitsAndBytes.cs
src/Starcounter.BitsAndBytes.Test/: BitsAndBytes.Test.csproj  Starcounter.BitsAndBytes.Test.csproj  packages.config
src/Starcounter.BitsAndBytes.Unsafe/: BitsAndBytes.Unsafe.csproj  BitsAndBytes.cs  Utf8Helper.cs  Utf8Writer.cs
src/Starcounter.Bootstrap/: AppsBootstrapper.cs  CommandLineConfiguration.cs  Configuration.cs  Control.cs  DbImpl.cs  HostConfiguration.cs  IAppStart.cs  IHostConfiguration.cs  ILifetimeService.cs  ProgramCommandLine.cs  RuntimeHost.cs  Starcounter.Bootstrap.csproj
src/Starcounter.Client.Angular/: Starcounter-Directives.js  Starcounter-Standalone.js  serverScope.js
src/Starcounter.CompilerService.Mono/: CodeBehindAnalyzer.cs  (+2 more)
(+5266 files in other folders)
